[package]
name = "commit_counts"
version = "1.0.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/edgarhsanchez/commit_counts.git"
description = "A tool to count commits in a git repository"
keywords = ["git", "commits", "count"]

[dependencies]
git2 = "0.19.0"
rayon = "1.10.0"

[target.x86_64-unknown-linux-gnu]
pre-build = [
  "dpkg --add-architecture $CROSS_DEB_ARCH",
  "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH"
]

[target.x86_64-apple-darwin]
pre-build = [
  "dpkg --add-architecture $CROSS_DEB_ARCH",
  "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH"
]

[licenses]
allow = [
    "MIT",
    "Apache-2.0"
]

[package.metadata.cargo-public-api-crates]
allowed = ["commit_counts"]
